--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,23 @@
 body{
     font-family: 'Poppins', sans-serif;
+    background-color: #AAAAAA;
     
 
 }
+main{
+    
+    
+    width: 1440px;
+    background-color: #FFFFFF;
+    margin-top: 80px;
+    margin-left: 250px;
+}
+
+
 .sec-01{
     display: flex;
-    padding-left: 60px;
+    
+    
 }
 .titel-01{
     font-weight: bold;
@@ -78,8 +90,8 @@ nav li a{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-row-gap: 30px;
-    padding-right: 300px;
-    margin-left: 400px;
+    
+    margin-left: 200px;
     margin-bottom: 75px;
 }
 
@@ -87,16 +99,20 @@ nav li a{
     width: 310px;
     height: 486px;
     background-color: #FFFFFF;
+    
     box-shadow:0px 0px 20px rgba(0, 0, 0, 30);
     border-radius: 5px;
+    
+
     
 
 }
  .collections .collection .collection-products img{
     width: 280px;
     height: 236px;
-    padding-top: 12px;
-    padding-left: 12px;
+    padding-left: 15px;
+    padding-top: 10px;
+    
 }
 .products-details{
     font-size: 20px;
@@ -129,6 +145,21 @@ nav li a{
 .page{     
     text-align: end;
     color: #E02C6D;
-    padding-right: 300px;
-    
-}
+    font-weight: bolder;
+    padding-right: 150px;
+ }
+
+
+
+ /* foooter */
+ .foot-finish{ 
+     border: none;
+     border: 1px solid black;
+     background-color: rgb(1, 1, 54);
+     color: whitesmoke;
+     text-align: center;
+ }
+ .social-links{
+     font-size: 40px;
+    padding-right: 15px;
+ }
